user-service/src/main/java/com/example/user_service/Errors/custom/ResourceNotFoundException.java
package com.example.user_service.Errors.custom;

public class ResourceNotFoundException extends RuntimeException {

    public ResourceNotFoundException(String message) {
        super(message);
    }
}
